# codeai

./: .gitignore  .licenserc.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  RELEASE.md  install.sh  pyproject.toml  test.py
codeai/: __init__.py  __version__.py  banner.py  cli.py  tux.py
codeai/animations/: __init__.py  about.py  gif.py  rain.py  utils.py
codeai/commands/: __init__.py  about.py  agents.py  browser.py  browser_lexical.py  browser_notebook.py  clear.py  cls.py  codemode_toggle.py  context.py  context_export.py  exit.py  gif.py  help.py  jupyter.py  mcp_servers.py  rain.py  skills.py  status.py  suggestions.py  tools.py  tools_last.py
codeai/demos/: demo_spinner.py
codeai/tests/: test_spinner.py
docs/: IMPLEMENTATION.md  LOADING_ANIMATION.md  Makefile  README.md  SPINNER.md  VISUALS.md  docusaurus.config.js  package.json
docs/docs/: index.mdx
docs/docs/cli/: _category_.yml  index.mdx
docs/docs/implementation/: _category_.yml  index.mdx
